syntax = "proto3";

package raw_product;

service RawProductService {
  rpc BatchCreateProducts (BatchCreateProductsRequest) returns (BatchCreateProductsResponse);
}

message RawProduct {
  string id = 1;
  string name = 2;
  int32 price = 3;
  string image_url = 4;
  string product_url = 5;
  string category = 6;
  string source = 7;
  string query = 8;
}

message BatchCreateProductsRequest {
  repeated RawProduct products = 1;
}

message BatchCreateProductsResponse {
  int32 inserted = 1;
} 