// Original file: src/proto/raw-product.proto


export interface RawProduct {
  'id'?: (string);
  'name'?: (string);
  'price'?: (number);
  'imageUrl'?: (string);
  'productUrl'?: (string);
  'category'?: (string);
  'source'?: (string);
  'query'?: (string);
}

export interface RawProduct__Output {
  'id'?: (string);
  'name'?: (string);
  'price'?: (number);
  'imageUrl'?: (string);
  'productUrl'?: (string);
  'category'?: (string);
  'source'?: (string);
  'query'?: (string);
}
